fix: changed text-align to footer-align

--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -99,7 +99,7 @@ h6 {
 
 .section-footer {
     padding: var(--section-footer-padding);
-    text-align: horizontal
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
